[package]
name = "test_channel_order"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

tokio = { version = "1.22.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "parking_lot",
  "time",
  "sync",
  "macros",
  "io-util",
] }
